first update 2023 sep

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,23 +30,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  adaptive_theme: ^2.2.0
+  adaptive_theme: ^2.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  url_launcher: ^6.0.9
-  permission_handler: ^8.1.3
-  flutter_staggered_grid_view: ^0.4.0
+  url_launcher: ^6.1.5
+  permission_handler: ^10.0.2
+#  flutter_staggered_grid_view: ^0.6.0
   path_provider: ^2.0.2
-  image_gallery_saver: ^1.5.0
-  flutter_html: ^2.1.0
+  image_gallery_saver: ^2.0.1
   flutter_speed_dial: ^4.1.0
-  thumbnails: ^1.0.1
-  flutter_fab_dialer: ^0.1.1
-  chewie: ^1.2.2
+  video_thumbnail: ^0.5.3
+  chewie: ^1.3.4
   video_player: ^2.1.10
-
+  device_info_plus: ^7.0.0
+  speed_dial_fab: ^2.2.1
+  flutter_html: ^2.2.1
 
 dev_dependencies:
   flutter_test:
